# serializer version: 1
# name: test_all_entities[sensor.nanostation_5ac_ap_name_antenna_gain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_antenna_gain',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Antenna Gain',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_antenna_gain',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_antenna_gain',
    'unit_of_measurement': 'dB',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_antenna_gain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'NanoStation 5AC ap name  Antenna Gain',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dB',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_antenna_gain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '13',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_download_capacity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_download_capacity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Download capacity',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_polling_dl_capacity',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_polling_dl_capacity',
    'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_download_capacity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'NanoStation 5AC ap name  Download capacity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_download_capacity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '647400',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_network_role-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_network_role',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Network Role',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'host_netrole',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_host_netrole',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_network_role-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NanoStation 5AC ap name  Network Role',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_network_role',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'bridge',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_throughput_receive_actual-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_throughput_receive_actual',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Throughput Receive (actual)',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_throughput_rx',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_throughput_rx',
    'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_throughput_receive_actual-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'NanoStation 5AC ap name  Throughput Receive (actual)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_throughput_receive_actual',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9907',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_throughput_transmit_actual-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_throughput_transmit_actual',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Throughput Transmit (actual)',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_throughput_tx',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_throughput_tx',
    'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_throughput_transmit_actual-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'NanoStation 5AC ap name  Throughput Transmit (actual)',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_throughput_transmit_actual',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '222',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_upload_capacity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_upload_capacity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Upload capacity',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_polling_ul_capacity',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_polling_ul_capacity',
    'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_upload_capacity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'NanoStation 5AC ap name  Upload capacity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfDataRate.KILOBITS_PER_SECOND: 'kbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_upload_capacity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '540540',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_frequency-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_frequency',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.FREQUENCY: 'frequency'>,
    'original_icon': None,
    'original_name': 'Wireless Frequency',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_frequency',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_frequency',
    'unit_of_measurement': <UnitOfFrequency.MEGAHERTZ: 'MHz'>,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_frequency-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'frequency',
      'friendly_name': 'NanoStation 5AC ap name  Wireless Frequency',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfFrequency.MEGAHERTZ: 'MHz'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_frequency',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5500',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wireless Mode',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_mode',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NanoStation 5AC ap name  Wireless Mode',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ap-ptp',
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_ssid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_ssid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wireless SSID',
    'platform': 'airos',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wireless_essid',
    'unique_id': '03aa0d0b40fed0a47088293584ef5432_wireless_essid',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.nanostation_5ac_ap_name_wireless_ssid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'NanoStation 5AC ap name  Wireless SSID',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nanostation_5ac_ap_name_wireless_ssid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'DemoSSID',
  })
# ---
